# worldofpadman

./: .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYING.md  Dockerfile.wopded  IOQ3-README  LICENSES.md  MAPPACK.md  Makefile  README  README.md  SECURITY.md  make-macosx-ub.sh  wop-changelog.md
code/: .clang-format  .clang-tidy  CMakeLists.txt
code/asm/: ftola.c  qasm-inline.h  qasm.h  snapvector.c  snd_mixa.s  vm_x86_64.asm
code/autoupdater/: autoupdater.c
code/botlib/: aasfile.h  be_aas.h  be_aas_bsp.h  be_aas_bspq3.c  be_aas_cluster.c  be_aas_cluster.h  be_aas_debug.c  be_aas_debug.h  be_aas_def.h  be_aas_entity.c  be_aas_entity.h  be_aas_file.c  be_aas_file.h  be_aas_funcs.h  be_aas_main.c  be_aas_main.h  be_aas_move.c  be_aas_move.h  be_aas_optimize.c  be_aas_reach.c  be_aas_reach.h  be_aas_route.c  be_aas_route.h  be_aas_routealt.c  be_aas_routealt.h  be_aas_sample.c  be_aas_sample.h  be_ai_char.c  be_ai_char.h  be_ai_chat.c  be_ai_chat.h  be_ai_gen.c  be_ai_gen.h  be_ai_goal.c  be_ai_goal.h  be_ai_move.c  be_ai_move.h  be_ai_weap.c  be_ai_weap.h  be_ai_weight.c  (+21 more)
code/cgame/: CMakeLists.txt  cg_advanced2d.c  cg_catch.c  cg_consolecmds.c  cg_cutscene2d.c  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_ents.c  cg_event.c  cg_freezetag.c  cg_info.c  cg_lensflare.c  cg_local.h  cg_localents.c  cg_main.c  cg_marks.c  cg_misc.c  cg_newdraw.c  cg_particles.c  cg_players.c  cg_playerstate.c  cg_predict.c  cg_public.h  cg_rautelib.c  cg_scoreboard.c  cg_servercmds.c  cg_snapshot.c  cg_spraylogo.c  cg_spriteparticles.c  cg_syscalls.asm  cg_syscalls.c  cg_syscalls.h  cg_view.c  cg_weapons.c  cgame.bat  cgame.q3asm  wopc_advanced2d.c  wopc_advanced2d.h
code/client/: CMakeLists.txt  cin_ogm.c  cl_avi.c  cl_cgame.c  cl_cin.c  cl_console.c  cl_curl.c  cl_curl.h  cl_http.h  cl_http_curl.c  cl_http_windows.c  cl_input.c  cl_keys.c  cl_main.c  cl_net_chan.c  cl_parse.c  cl_scrn.c  cl_ui.c  cl_voip.c  cl_voip.h  client.h  keycodes.h  keys.h  libmumblelink.c  libmumblelink.h  qal.c  qal.h  snd_adpcm.c  snd_altivec.c  snd_codec.c  snd_codec.h  snd_codec_mp3.c  snd_codec_ogg.c  snd_codec_opus.c  snd_codec_wav.c  snd_dma.c  snd_local.h  snd_main.c  snd_mem.c  snd_mix.c  (+3 more)
code/game/: CMakeLists.txt  ai_chat.c  ai_chat.h  ai_cmd.c  ai_cmd.h  ai_dmnet.c  ai_dmnet.h  ai_dmq3.c  ai_dmq3.h  ai_main.c  ai_main.h  ai_team.c  ai_team.h  ai_vcmd.c  ai_vcmd.h  be_alloc.c  be_alloc.h  be_bot.c  be_bot.h  be_cmds.c  be_cmds.h  be_storage.c  be_storage.h  be_svcmds.c  be_svcmds.h  be_util.c  be_util.h  be_vote.c  be_vote.h  bg_game.h  bg_lib.c  bg_lib.h  bg_local.h  bg_misc.c  bg_pmove.c  bg_public.h  bg_slidemove.c  chars.h  g_active.c  g_arenas.c  (+45 more)
code/jpeg-8c/: jpeglib.h
code/null/: CMakeLists.txt  mac_net.c  null_client.c  null_glimp.c  null_input.c  null_main.c  null_net.c  null_server.c  null_snddma.c  null_sys.c
code/q3_ui/: ui.bat  ui.q3asm  ui_addbots.c  ui_atoms.c  ui_callvote.c  ui_cdkey.c  ui_confirm.c  ui_connect.c  ui_controls2.c  ui_credits.c  ui_demo2.c  ui_display.c  ui_exit.c  ui_gameinfo.c  ui_help.c  ui_ingame.c  ui_local.h  ui_main.c  ui_mediaview.c  ui_menu.c  ui_mfield.c  ui_mods.c  ui_music.c  ui_network.c  ui_password.c  ui_playermodel.c  ui_players.c  ui_playersettings.c  ui_preferences.c  ui_qmenu.c  ui_rankstatus.c  ui_removebots.c  ui_saveconfig.c  ui_serverinfo.c  ui_servers2.c  ui_setup.c  ui_signup.c  ui_sound.c  ui_specifyleague.c  ui_specifyserver.c  (+11 more)
code/qcommon/: cm_load.c  cm_local.h  cm_patch.c  cm_patch.h  cm_polylib.c  cm_polylib.h  cm_public.h  cm_test.c  cm_trace.c  cmd.c  common.c  cvar.c  files.c  huffman.c  ioapi.c  ioapi.h  json.h  map_limits.h  md4.c  md5.c  msg.c  net_chan.c  net_ip.c  puff.c  puff.h  q_math.c  q_platform.h  q_shared.c  q_shared.h  qcommon.h  qfiles.h  surfaceflags.h  unzip.c  unzip.h  vm.c  vm_aarch64.c  vm_armv7l.c  vm_interpreted.c  vm_local.h  vm_none.c  (+6 more)
code/renderer/: tr_cmds.c  tr_init.c  tr_local.h  tr_main.c  tr_scene.c  tr_shade.c  tr_shader.c  tr_types.h
code/renderer_vulkan/: CMakeLists.txt  README.md  image_loader.h  matrix_multiplication.c  matrix_multiplication.h  ref_import.c  ref_import.h  render_export.c  render_export.h  tr_animation.c  tr_backend.c  tr_backend.h  tr_bsp.c  tr_cmds.c  tr_config.c  tr_config.h  tr_cull.c  tr_curve.c  tr_cvar.c  tr_cvar.h  tr_debuggraphics.c  tr_drawnormals.c  tr_drawnormals.h  tr_drawtris.c  tr_drawtris.h  tr_findshader.c  tr_flares.c  tr_flares.h  tr_fog.c  tr_fog.h  tr_fonts.c  tr_globals.c  tr_globals.h  tr_icon.h  tr_image.c  tr_image.h  tr_imageprocess.c  tr_imageprocess.h  tr_init.c  tr_lerptag.c  (+67 more)
code/renderercommon/: iqm.h  puff.h  qgl.h  tr_common.h  tr_font.c  tr_image_bmp.c  tr_image_jpg.c  tr_image_pcx.c  tr_image_png.c  tr_image_tga.c  tr_noise.c  tr_public.h  tr_shared.c  tr_shared.h  tr_subs.c  tr_types.h
code/renderergl1/: CMakeLists.txt  tr_altivec.c  tr_animation.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_curve.c  tr_flares.c  tr_image.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_marks.c  tr_mesh.c  tr_model.c  tr_model_iqm.c  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_sky.c  tr_surface.c  tr_world.c
code/renderergl2/: CMakeLists.txt  tr_animation.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_curve.c  tr_dsa.c  tr_dsa.h  tr_extensions.c  tr_extramath.c  tr_extramath.h  tr_extratypes.h  tr_fbo.c  tr_fbo.h  tr_flares.c  tr_glsl.c  tr_image.c  tr_image_dds.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_marks.c  tr_mesh.c  tr_model.c  tr_model_iqm.c  tr_postprocess.c  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_sky.c  tr_subs.c  tr_surface.c  tr_vbo.c  tr_world.c
code/sdl/: sdl_gamma.c  sdl_glimp.c  sdl_icon.h  sdl_input.c  sdl_snd.c
code/server/: CMakeLists.txt  server.h  sv_bot.c  sv_ccmds.c  sv_client.c  sv_discord.c  sv_discord.h  sv_game.c  sv_http.c  sv_http.h  sv_http_curl.c  sv_http_windows.c  sv_init.c  sv_main.c  sv_net_chan.c  sv_rankings.c  sv_snapshot.c  sv_world.c
libs/: CMakeLists.txt
ui/: menudef.h
(+4162 files in other folders)
