add_subdirectory(AL)
add_subdirectory(curl-7.54.0)
add_subdirectory(jpeg-9e)
add_subdirectory(libogg-1.3.5)
add_subdirectory(libtheora-1.1.1)
add_subdirectory(libvorbis-1.3.7)
add_subdirectory(opus-1.3.1)
add_subdirectory(opusfile-0.12)
add_subdirectory(zlib)
if (UNIX)
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(SDL2 REQUIRED sdl2)
    add_library(SDL2_system INTERFACE)
    add_library(SDL2_main INTERFACE)
    target_include_directories(SDL2_system INTERFACE ${SDL2_INCLUDE_DIRS})
    target_link_libraries(SDL2_system INTERFACE ${SDL2_LINK_LIBRARIES})
    add_library(SDL2::SDL2 ALIAS SDL2_system)
    add_library(SDL2::SDL2main ALIAS SDL2_main)
else()
    set(OUTPUT_DIRECTORY "${ROOT_DIR}/${ENGINE_BINARY_DIR}")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIRECTORY}")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIRECTORY}")
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")
    set(SDL_CMAKE_DEBUG_POSTFIX "" CACHE STRING "Name suffix for debug builds")
    add_subdirectory(SDL2)
endif()
