add_subdirectory(AL)
if (UNIX AND USE_HTTP)
	add_subdirectory(curl-7.54.0)
endif()

if (NOT USE_INTERNAL_ZLIB)
	find_package(ZLIB REQUIRED)
	add_library(zlib INTERFACE)
	target_link_libraries(zlib INTERFACE ZLIB::ZLIB)
else()
	add_subdirectory(zlib)
endif()

if (NOT USE_INTERNAL_JPEG)
	find_package(JPEG REQUIRED)
	add_library(jpeg INTERFACE)
	target_link_libraries(jpeg INTERFACE JPEG::JPEG)
else()
	add_subdirectory(jpeg-9e)
endif()

if (NOT USE_INTERNAL_OGG)
	find_package(PkgConfig REQUIRED)
	pkg_check_modules(OGG REQUIRED ogg)
	add_library(ogg INTERFACE)
	target_include_directories(ogg INTERFACE ${OGG_INCLUDE_DIRS})
	target_link_libraries(ogg INTERFACE ${OGG_LINK_LIBRARIES})
else()
	add_subdirectory(libogg-1.3.5)
endif()

if (NOT USE_INTERNAL_VORBIS)
	find_package(PkgConfig REQUIRED)
	pkg_check_modules(VORBIS REQUIRED vorbis vorbisfile)
	add_library(vorbis INTERFACE)
	target_include_directories(vorbis INTERFACE ${VORBIS_INCLUDE_DIRS})
	target_link_libraries(vorbis INTERFACE ${VORBIS_LINK_LIBRARIES})
	target_compile_definitions(vorbis INTERFACE USE_CODEC_VORBIS)
else()
	add_subdirectory(libvorbis-1.3.7)
endif()

if (NOT USE_INTERNAL_THEORA)
	find_package(PkgConfig REQUIRED)
	pkg_check_modules(THEORA REQUIRED theora)
	add_library(theora INTERFACE)
	target_include_directories(theora INTERFACE ${THEORA_INCLUDE_DIRS})
	target_link_libraries(theora INTERFACE ${THEORA_LINK_LIBRARIES})
	target_compile_definitions(theora INTERFACE USE_CIN_THEORA)
else()
	add_subdirectory(libtheora-1.1.1)
endif()

if (NOT USE_INTERNAL_OPUS)
	find_package(PkgConfig REQUIRED)
	pkg_check_modules(OPUS REQUIRED opus)
	add_library(opus INTERFACE)
	target_include_directories(opus INTERFACE ${OPUS_INCLUDE_DIRS})
	target_link_libraries(opus INTERFACE ${OPUS_LINK_LIBRARIES})
	target_compile_definitions(opus INTERFACE USE_CODEC_OPUS)
else()
	add_subdirectory(opus-1.3.1)
endif()

if (NOT USE_INTERNAL_OPUSFILE)
	find_package(PkgConfig REQUIRED)
	pkg_check_modules(OPUSFILE REQUIRED opusfile)
	add_library(opusfile INTERFACE)
	target_include_directories(opusfile INTERFACE ${OPUSFILE_INCLUDE_DIRS})
	target_link_libraries(opusfile INTERFACE ${OPUSFILE_LINK_LIBRARIES})
else()
	add_subdirectory(opusfile-0.12)
endif()

add_subdirectory(backward)
if (UNIX AND NOT USE_INTERNAL_SDL)
	find_package(PkgConfig)
	pkg_check_modules(SDL2 REQUIRED sdl2)
	add_library(SDL2_system INTERFACE)
	add_library(SDL2_main INTERFACE)
	target_include_directories(SDL2_system INTERFACE ${SDL2_INCLUDE_DIRS})
	target_link_libraries(SDL2_system INTERFACE ${SDL2_LINK_LIBRARIES})
	add_library(SDL2::SDL2 ALIAS SDL2_system)
	add_library(SDL2::SDL2main ALIAS SDL2_main)
else()
	set(OUTPUT_DIRECTORY "${ROOT_DIR}/${ENGINE_BINARY_DIR}")
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIRECTORY}")
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIRECTORY}")
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")
	set(SDL_CMAKE_DEBUG_POSTFIX "" CACHE STRING "Name suffix for debug builds")
	set(SDL2_DISABLE_INSTALL ON CACHE BOOL "" FORCE)
	set(SDL2_DISABLE_UNINSTALL ON CACHE BOOL "" FORCE)
	set(SDL_FORCE_STATIC_VCRT ON CACHE BOOL "" FORCE)
	set(SDL_STATIC_ENABLED_BY_DEFAULT OFF CACHE BOOL "" FORCE)
	set(SDL_TEST_ENABLED_BY_DEFAULT OFF CACHE BOOL "" FORCE)
	add_subdirectory(SDL2)
	install(TARGETS SDL2 RUNTIME DESTINATION "${OUTPUT_DIRECTORY}" COMPONENT wop)
endif()
